# localauthentication-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_smoke.rs  02_async_policy.rs  02_policy_catalog.rs  03_error_codes.rs  04_credentials.rs  05_authentication_requirements.rs  06_rights.rs  07_right_store.rs  08_persisted_right.rs  09_public_key.rs  10_environment.rs
src/: async_api.rs  context.rs  error.rs  la_authentication_requirement.rs  la_context.rs  la_credential.rs  la_environment.rs  la_error.rs  la_persisted_right.rs  la_policy.rs  la_public_key.rs  la_right.rs  la_right_store.rs  lib.rs  private.rs
src/ffi/: la_authentication_requirement.rs  la_context.rs  la_credential.rs  la_environment.rs  la_error.rs  la_persisted_right.rs  la_policy.rs  la_public_key.rs  la_right.rs  la_right_store.rs  mod.rs
swift-bridge/: Package.swift
swift-bridge/Sources/LocalAuthenticationBridge/: Async.swift  Context.swift  Core.swift  LAAuthenticationRequirement.swift  LAContext.swift  LACredential.swift  LAEnvironment.swift  LAError.swift  LAPersistedRight.swift  LAPolicy.swift  LAPublicKey.swift  LARight.swift  LARightStore.swift
tests/: async_api_tests.rs  la_authentication_requirement_tests.rs  la_context_tests.rs  la_credential_tests.rs  la_environment_tests.rs  la_error_tests.rs  la_persisted_right_tests.rs  la_policy_tests.rs  la_public_key_tests.rs  la_right_store_tests.rs  la_right_tests.rs
tests/common/: mod.rs
