[package]
name = "localauthentication-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/localauthentication-rs"
repository = "https://github.com/doom-fish/localauthentication-rs"
description = "Safe Rust bindings for Apple's LocalAuthentication framework — LAContext, policies, biometry, and evaluation on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["localauthentication", "biometrics", "touchid", "faceid", "macos"]
categories = ["api-bindings", "os::macos-apis"]
rust-version = "1.70"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "examples/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "localauthentication"
crate-type = ["lib"]

[features]
default = []

[dependencies]
libc = "0.2"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "01_smoke"

[profile.release]
debug = "full"
strip = "none"
